# fhw

./: .gitignore  AUTHORS  Dockerfile  README.md  fhw  fhw.cabal
.github/workflows/: main.yml
dist-newstyle/cache/: compiler  config
examples/: sample-test.sv
examples/List/ListLength/: MyLenth.hs
examples/List/Reverse/: MyReverse.hs
examples/QTreeBenchmarks/: run_test.py  test.tcl  test_gen.py
examples/QTreeBenchmarks/diploma/: demo_testbench_mask.sv  run_test.py  test.tcl  test_2.tcl
libraries/: build  check-hcr  fhw.sv  primops.txt
libraries/base/: Prelude.hcr  Prelude.hs  base.cabal
libraries/base/Control/: Monad.hcr
libraries/base/Control/Exception/: Base.hcr  Base.hs
libraries/base/Data/: Array.hcr  Array.hs  Bits.hcr  Char.hcr  Char.hs  Either.hcr  Either.hs  Int.hcr  Ix.hcr  List.hcr  Maybe.hcr  Maybe.hs  Tuple.hcr  Word.hcr  Word.hs
libraries/base/GHC/: Arr.hcr  Arr.lhs  Base.hcr  Base.lhs  Char.hcr  Enum.hcr  Err.hcr  Err.lhs  Exception.hcr  Exception.lhs  Int.hcr  Int.hs  List.hcr  List.lhs  Num.hcr  Real.hcr  Real.lhs  ST.hcr  ST.lhs  Show.hcr  Show.lhs  Unicode.hcr  Unicode.hs  Word.hcr  Word.hs
libraries/base/include/: HsBaseConfig.h
libraries/fhw/: FHW.hcr  FHW.hs  StackOps.hcr  StackOps.hs  fhw.cabal
libraries/fhw/FHW/: Prim.hcr  Prim.hs
libraries/ghc-prim/: ghc-prim.cabal
libraries/ghc-prim/GHC/: CString.hcr  Classes.hcr  Magic.hcr  Tuple.hcr  Types.hcr  Types.hs
libraries/includes/: ghcautoconf.h
libraries/integer-gmp/: integer-gmp.cabal
libraries/integer-gmp/GHC/: Integer.hcr
libraries/integer-gmp/GHC/Integer/: Logarithms.hcr  Type.hcr
libraries/integer-gmp/GHC/Integer/GMP/: Internals.hcr  Prim.hcr  Prim.hs
libraries/integer-gmp/GHC/Integer/Logarithms/: Internals.hcr
src/: Dfc.hs  Fhw.hs  README
src/Dfc/: AST.hs  DumpDot.hs  SAST.hs
src/Dfc/Parser/: Lex.hs  ParseGlue.hs  Parser.y
src/Dfc/Pass/Buffer/: Buffer.hs  (+1 more)
src/Dfc/Semantics/: Check.hs  Errors.hs
src/Dfc/Verilog/: AlgebraicTypes.hs  SystemVerilog.hs  Testbench.hs  Verilog.hs  VerilogGen.hs  VerilogGenOld.hs  VerilogGenRst.hs
src/Fhw/Core/: Core.hs
src/Fhw/CoreParser/: Encoding.hs  Lex.hs  ParseGlue.hs  Parser.y
src/Fhw/Haskgen/: DeadCode.hs  Haskgen.hs
src/Fhw/Linker/: Linker.hs
src/Fhw/ProfileParser/: Lex.hs  ParseGlue.hs  Parser.y  ProfileInfo.hs
src/Fhw/SysVerGen/: AlgebraicTypes.hs  SysVerGen.hs  SystemVerilog.hs  test-sv.hs
(+346 files in other folders)
